# muduo-http-AI-server-project

./: .gitignore  CMakeLists.txt  Dockerfile  HTTP框架项目技术栈与实施方案.md  MCP_SERVER_DESIGN.md  README.md  docker-compose.yml  server.conf  server.conf.example  start.bat  start.sh
.claude/worktrees/reverent-meninsky-a6e8dc/: .gitignore  CMakeLists.txt  HTTP框架项目技术栈与实施方案.md  MCP_SERVER_DESIGN.md  README.md  server.conf.example
.claude/worktrees/reverent-meninsky-a6e8dc/certs/: server.crt  server.key
.claude/worktrees/reverent-meninsky-a6e8dc/include/http/: ai_gateway.h  chat_agent.h  config_manager.h  db_connection_pool.h  graceful_shutdown.h  http_context.h  http_request.h  http_response.h  http_server.h  https_server.h  log_manager.h  memory_manager.h  middleware.h  model_router.h  multipart_parser.h  rag_pipeline.h  rate_limiter.h  router.h  session.h  ssl_context.h  static_file_handler.h  stream_writer.h
.claude/worktrees/reverent-meninsky-a6e8dc/src/: main.cpp
.claude/worktrees/reverent-meninsky-a6e8dc/src/http/: chat_agent.cpp  config_manager.cpp  (+18 more)
.claude/worktrees/reverent-meninsky-a6e8dc/www/: chat.html  index.html  mcp-client.html  upload.html
.github/workflows/: docker.yml
certs/: server.crt  server.key
include/http/: ai_config.h  ai_gateway.h  chat_agent.h  config_manager.h  db_connection_pool.h  graceful_shutdown.h  http_context.h  http_request.h  http_response.h  http_server.h  https_server.h  log_manager.h  memory_manager.h  middleware.h  model_router.h  multipart_parser.h  rag_pipeline.h  rate_limiter.h  router.h  session.h  ssl_context.h  static_file_handler.h  stream_writer.h  user_auth.h  user_manager.h
include/http/mcp/: mcp_protocol.h  mcp_server.h  mcp_session.h  mcp_tool.h  mcp_transport.h
memory/: chat_default.json
prompts/: L1_root.txt  L2_workflow.txt  L3_tools_exec.txt  L3_tools_fileops.txt  L3_tools_read.txt  L3_tools_web.txt  L4_output.txt  L5_strategy.txt
scripts/: setup.sh
src/: main.cpp
src/http/: ai_gateway.cpp  chat_agent.cpp  config_manager.cpp  db_connection_pool.cpp  graceful_shutdown.cpp  http_context.cpp  http_response.cpp  http_server.cpp  https_server.cpp  log_manager.cpp  memory_manager.cpp  middleware.cpp  model_router.cpp  multipart_parser.cpp  rag_pipeline.cpp  rate_limiter.cpp  router.cpp  session.cpp  ssl_context.cpp  static_file_handler.cpp  stream_writer.cpp  user_manager.cpp
src/http/mcp/: mcp_protocol.cpp  mcp_server.cpp  mcp_session.cpp  mcp_tool.cpp  mcp_transport.cpp
www/: chat.html  index.html  mcp-client.html  upload.html
(+11 files in other folders)
